--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
     </div>
     <div class="content">
         <div class="sidebar">
-            <img src="/api/placeholder/150/150" alt="Profile Picture" class="profile-pic">
+            <img src="images\pic01.jpg" alt="Profile Picture" class="profile-pic">
             <div class="sidebar-item">
                 <p class="sidebar-title">Najmi Hassan</p>
                 <p class="sidebar-info">Sofrware Engineer</p>
             </div>
             <div class="sidebar-item">
-                <p class="sidebar-info">Location</p>
+                <p class="sidebar-info">Lahore, Pakistan</p>
             </div>
             <div class="social-links">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/najmihassan">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                         <rect x="2" y="9" width="4" height="12"></rect>
@@ -155,13 +155,13 @@
                     </svg>
                     LinkedIn
                 </a>
-                <a href="#">
+                <a href="https://github.com/NajmiHassan">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                     </svg>
                     GitHub
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/hello_najmi?igsh=MWVmbHdiY3Z5c3F5">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                         <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
@@ -169,13 +169,13 @@
                     </svg>
                     Instagram
                 </a>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <a href="https://x.com/ether_bell?t=WzCMq3f9Usq7oXHPdvLszg&s=09">
+                    <!-- <svg xmlns="" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
-                    </svg>
-                    Twitter
+                    </svg> -->
+                    X(Formarly Twitter)
                 </a>
-                <a href="mailto:your.email@example.com">
+                <a href="mailto:najmi8815@gmail.com">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                         <polyline points="22,6 12,13 2,6"></polyline>
@@ -208,21 +208,30 @@
             <div class="section">
                 <h2>Achievements</h2>
                 <div class="award-item">
-                    <p><strong><a href="https://englishtest.duolingo.com/">Duolingo Score: 130</a></strong></p>
+                    <p><strong><a href="https://drive.google.com/file/d/1SU9ekxkx42AqRsA4dsUw8-4BJV46oNCG/view?usp=sharing">Duolingo Score: 130</a></strong></p>
                     <p class="award-detail">Achieved 130 score in Duolingo English test</p>
                 </div>
                 <div class="award-item">
-                    <p><strong><a href="#">Merit Scholarship Winner</a></strong></p>
+                    <p><strong><a href="https://drive.google.com/file/d/1uxMPaLT9cT-wRzcnWIOnSZZaK6vBVCqd/view?usp=drive_link">Merit Scholarship Winner</a></strong></p>
                     <p class="award-detail">Awarded 40% fee waiver throughout the bachelors degree for achieving 1st position in Merit Scholarship test</p>
                 </div>
                 <div class="award-item">
-                    <p><strong><a href="https://cs50.harvard.edu/x/2024/puzzles/">Harvard CS50x Puzzle Day</a></strong></p>
+                    <p><strong><a href="https://drive.google.com/file/d/11nDC3Fu46Jcp9ONxORbwdslrWMyp0LnF/view?usp=sharing">Harvard CS50x Puzzle Day</a></strong></p>
                     <p class="award-detail">1st position after solving 9/9 puzzles in Harvard CS50x Puzzle Day</p>
                 </div>
                 <div class="award-item">
-                    <p><strong><a href="https://calico.berkeley.edu/">UC Berkeley Coding Competition</a></strong></p>
+                    <p><strong><a href="https://drive.google.com/file/d/1EZv-eLBxTXS32U5fNpzNhkMeHxFS6Q8P/view?usp=sharing">UC Berkeley Coding Competition</a></strong></p>
                     <p class="award-detail">Participation in well known international UC Berkeley CALICO contest and solving coding questions</p>
                 </div>
+                <div class="award-item">
+                    <p><strong><a href="https://www.linkedin.com/posts/najmihassan_adventofcode-programming-problemsolving-activity-7277664679445811200-zBx7?utm_source=share&utm_medium=member_desktop">Advent of Code 2024</a></strong></p>
+                    <p class="award-detail">Participated in Advent of Code 2024 season</p>
+                </div>
+                <div class="award-item">
+                    <p><strong><a href="https://www.linkedin.com/posts/najmihassan_informatics-teamwork-learningexperience-activity-7287222015697063936-sCt8?utm_source=share&utm_medium=member_desktop">M(IT)^2 Winter 2025</a></strong></p>
+                    <p class="award-detail">Participated in M(IT)^2 Winter 2025 Tournament</p>
+                </div>
+
             </div>
 
             <div class="section">
