--- a/projects.html
+++ b/projects.html
@@ -85,22 +85,43 @@
     <h2>Projects</h2>
     
     <div class="project-card">
-        <h3 class="project-title">AI-Powered Health Diagnosis System</h3>
+        <h3 class="project-title">Image Forgery Detection system [Final Year Project]</h3>
         <div class="project-tags">
             <span class="tag">Python</span>
             <span class="tag">Machine Learning</span>
-            <span class="tag">Healthcare</span>
+            <span class="tag">Image Processing</span>
             <span class="tag">TensorFlow</span>
+            <span class="tag">Keras</span>
         </div>
-        <p>Developed a machine learning model to predict early signs of chronic diseases based on medical data. The system analyzes patient records and biomarkers to provide preliminary risk assessments with 89% accuracy.</p>
+        <ul>
+            <li>Built Image forgery detection application to distinguish between real and tempered images.</li>
+            <li>Used CNN to train the model. CPU based model training</li>
+            <li>Achieved accuracy of above 80%</li>
+        </ul>
+   
         <div class="project-links">
-            <a href="#">
+            <a href="https://github.com/NajmiHassan/My-FYP-Image-Forgery-Detection-">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                 </svg>
                 GitHub
             </a>
-            <a href="#">
+        </div>
+    </div>
+
+    <div class="project-card">
+        <h3 class="project-title">Gemini Ultra 1.0 Hackathon (Anatomy Mentor) </h3>
+        <div class="project-tags">
+            <span class="tag">Generative AI</span>
+            <span class="tag">Python</span>
+            <span class="tag">Stremlit</span>
+        </div>
+        <ul>
+            <li>Envisioned a chatbot companion tailored specifically to medical student's needs</li>
+            <li>Offering real-time assistance, interactive learning experiences, and personalized insights to enhance their educational journey</li>
+        </ul>
+        <div class="project-links">
+                <a href="https://lablab.ai/event/gemini-ultra-hackathon/the-game-changers/anatomy-mentor">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                     <polyline points="15 3 21 3 21 9"></polyline>
@@ -112,49 +133,122 @@
     </div>
 
     <div class="project-card">
-        <h3 class="project-title">Natural Language Processing for Research Papers</h3>
+        <h3 class="project-title">Real-Time Object Detection and Counting Project</h3>
         <div class="project-tags">
-            <span class="tag">NLP</span>
+            <span class="tag">Computer Vision</span>
+            <span class="tag">YOLO v4</span>
             <span class="tag">Python</span>
-            <span class="tag">PyTorch</span>
-            <span class="tag">BERT</span>
+            <span class="tag">Hugging Face</span>
+            <span class="tag">OpenCV</span>    
         </div>
-        <p>Created a tool that automates the extraction of key findings from research papers. The system uses transformer models to identify significant contributions, methodology details, and results with high precision.</p>
+        <ul>
+            <li>Built a web app to detect objects by uploading a video</li>
+            <li>The model detects the objects frame by frame</li>
+        </ul>
         <div class="project-links">
-            <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
-                </svg>
-                GitHub
-            </a>
-        </div>
+            <a href="https://huggingface.co/spaces/NajmiHassan1/Object_Detection_Computer_Vision">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <line x1="10" y1="14" x2="21" y2="3"></line>
+            </svg>
+            Demo
+        </a>
+    </div>
     </div>
 
     <div class="project-card">
-        <h3 class="project-title">Computer Vision for Agricultural Monitoring</h3>
+        <h3 class="project-title">Air Pollution Prediction System</h3>
         <div class="project-tags">
-            <span class="tag">Computer Vision</span>
-            <span class="tag">Deep Learning</span>
-            <span class="tag">IoT</span>
-            <span class="tag">Agriculture</span>
+            <span class="tag">Streamlit</span>
+            <span class="tag">Hugging Face</span>
+            <span class="tag">Supervised Machine Learning</span>  
         </div>
-        <p>Built an end-to-end system for monitoring crop health using drone imagery. The model can detect plant diseases, estimate crop yields, and recommend interventions by analyzing aerial images.</p>
+        <ul>
+            <li>Built a web application to predict PM 2.5 and Air Quality Level</li>
+            <li>Trained Regression and Classification models on the Air Quality and Pollution Assessment Dataset from Kaggle</li>
+            <li>Achieved accuracy of 92% in terms of predicting the quality of Air</li>
+        </ul>
         <div class="project-links">
-            <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
-                </svg>
-                GitHub
-            </a>
-            <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                    <circle cx="8.5" cy="8.5" r="1.5"></circle>
-                    <polyline points="21 15 16 10 5 21"></polyline>
-                </svg>
-                Publication
-            </a>
+            <a href="https://huggingface.co/spaces/NajmiHassan1/Air_Pollution_Prediction_System">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <line x1="10" y1="14" x2="21" y2="3"></line>
+            </svg>
+            Demo
+        </a>
+    </div>
+    </div>
+
+    <div class="project-card">
+        <h3 class="project-title">Falcon Hackathon</h3>
+        <div class="project-tags">
+            <span class="tag">Django</span>
+            <span class="tag">Chart.js</span>
+            <span class="tag">Django Rest Framework</span>
+            <span class="tag">SQLite</span>  
         </div>
+        <ul>
+            <li>Built LaunchAI for students and people who want to launch a startup and to polish their idea </li>
+            <li>Utilized Django Framework and Falcon AI API</li>
+        </ul>
+        <div class="project-links">
+            <a href="https://lablab.ai/event/falcon-hackathon/ninja-hackers/launch-ai">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <line x1="10" y1="14" x2="21" y2="3"></line>
+            </svg>
+            Demo
+        </a>
+    </div>
+    </div>
+
+    <div class="project-card">
+        <h3 class="project-title">CrewAI Blogpost Generator</h3>
+        <div class="project-tags">
+            <span class="tag">Streamlit</span>
+            <span class="tag">CrewAI</span>
+            <span class="tag">Gemini</span>
+            <span class="tag">Serper Dev Tools</span>  
+        </div>
+        <ul>
+            <li>Built a blog post generator using cutting edge CrewAI Agentic framework in python</li>
+            <li>Allows multiple AI agents communicate to create a state-of-the-art blog in a separate markdown file in seconds</li>
+        </ul>
+        <div class="project-links">
+            <a href="https://www.linkedin.com/posts/najmihassan_ai-machinelearning-contentcreation-activity-7217199436274294784-H6Pf?utm_source=share&utm_medium=member_desktop">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <line x1="10" y1="14" x2="21" y2="3"></line>
+            </svg>
+            Demo
+        </a>
+    </div>
+    </div>
+
+    <div class="project-card">
+        <h3 class="project-title">Document Question/Answer</h3>
+        <div class="project-tags">
+            <span class="tag">LangChain</span>
+            <span class="tag">Chroma DB</span> 
+            <span class="tag">Streamlit</span> 
+        </div>
+        <ul>
+            <li>Built an application to chat with pdf to make the document reading grind easy</li>
+        </ul>
+        <div class="project-links">
+            <a href="https://github.com/NajmiHassan/Document-Q-A">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                <polyline points="15 3 21 3 21 9"></polyline>
+                <line x1="10" y1="14" x2="21" y2="3"></line>
+            </svg>
+            Demo
+        </a>
+    </div>
     </div>
 </body>
 </html>
