--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h1 class="name">Najmi Hassan</h1>
         <div class="nav">
             <a href="projects.html">Projects</a>
-            <a href="teaching.html">Teaching</a>
+            <a href="experience.html">Experience</a>
         </div>
     </div>
     <div class="content">
@@ -182,7 +182,7 @@
                     </svg>
                     Email
                 </a>
-                <a href="path/to/your/cv.pdf" download>
+                <a href="https://drive.google.com/drive/folders/1g0beCGIdRQ6VdLR8-w8ikiGj9GDetLyQ?usp=drive_link" download>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
