--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
         <h1 class="name"><a href="index.html" style="text-decoration: none; color: inherit;">Najmi Hassan</a></h1>
         <div class="nav">
             <a href="projects.html">Projects</a>
-            <a href="teaching.html">Teaching</a>
+            <a href="experience.html">Experience</a>
         </div>
     </div>
 
